# kutter_api

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
src/app/: auth.rs  communities.rs  mod.rs
src/app/websocket/: mod.rs
src/app/websocket/actions/: channels.rs  communities.rs  messages.rs  mod.rs
src/db/: auth.rs  channels.rs  communities.rs  invites.rs  members.rs  messages.rs  mod.rs  tokens.rs
src/models/: actions.rs  channel.rs  chat.rs  community.rs  member.rs  message.rs  mod.rs  token.rs  user.rs
src/utils/: cookies.rs  db_connection.rs  invites.rs  mod.rs  tokens.rs
