[package]
name = "kutter_api"
version = "0.1.0-dev"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"]}
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.0", features = ["serde"] }
bcrypt = "0.17.0"
x25519-dalek = "2.0.1"
rand = "0.8"
utoipa = "5.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde_json = "1.0"
